[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "repo_helper_sphinx_theme"
version = "0.0.2"
description = "Sphinx Theme for repo_helper."
readme = "README.rst"
keywords = [ "sphinx", "documentation", "repo-helper",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/repo-helper/repo_helper_sphinx_theme"
"Issue Tracker" = "https://github.com/repo-helper/repo_helper_sphinx_theme/issues"
"Source Code" = "https://github.com/repo-helper/repo_helper_sphinx_theme"
Documentation = "https://repo_helper_sphinx_theme.readthedocs.io/en/latest"

[tool.mkrecipe]
conda-channels = [ "repo-helper",]
extras = "all"
license-key = "BSD-3-Clause"

[tool.importcheck]

[project.entry-points."sphinx.html_themes"]
repo_helper_sphinx_theme = "repo_helper_sphinx_theme"
