[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "repo_helper_sphinx_theme"
version = "0.0.2"
description = "Sphinx Theme for repo_helper."
readme = "README.rst"
keywords = [ "sphinx", "documentation", "repo-helper",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/repo-helper/repo_helper_sphinx_theme"
"Issue Tracker" = "https://github.com/repo-helper/repo_helper_sphinx_theme/issues"
"Source Code" = "https://github.com/repo-helper/repo_helper_sphinx_theme"
Documentation = "https://repo_helper_sphinx_theme.readthedocs.io/en/latest"

[tool.mkrecipe]
conda-channels = [ "repo-helper",]
extras = "all"
license-key = "BSD-3-Clause"

[tool.importcheck]

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Theme",
    "Intended Audience :: Developers",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "BSD-3-Clause"
additional-files = [
    "recursive-include repo_helper_sphinx_theme *.*",
    "recursive-exclude repo_helper_sphinx_theme .*.swp",
]

[project.entry-points."sphinx.html_themes"]
repo_helper_sphinx_theme = "repo_helper_sphinx_theme"
